--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+label,
+h2,
+p {
+  font-weight: 300 !important;
+}
+
+.no-select {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
